--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
-    "version": 2,
-    "routes": [
-      { "src": "/", "dest": "/pazarama_paneli/urls.py" }
-    ],
-    "env": {
-      "DJANGO_SETTINGS_MODULE": "pazarama_paneli.settings"
-    },
-    "builds": [
-      {
-        "src": "pazarama_paneli/urls.py",
-        "use": "@vercel/python"
-      }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
   }
-  
